frontend/public/style.css
@import url('https://use.fontawesome.com/releases/v5.15.3/css/all.css');
@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Oswald:wght@500&family=Roboto&family=Rochester&display=swap');
/*
 * Created on Wed Feb 10 2021
 *
 * The Unlicense
 * This is free and unencumbered software released into the public domain.
 *
 * Anyone is free to copy, modify, publish, use, compile, sell, or distribute
 * this software, either in source code form or as a compiled binary, for any
 * purpose, commercial or non-commercial, and by any means.
 *
 * In jurisdictions that recognize copyright laws, the author or authors of this
 * software dedicate any and all copyright interest in the software to the public
 * domain. We make this dedication for the benefit of the public at large and to
 * the detriment of our heirs and successors. We intend this dedication to be an
 * overt act of relinquishment in perpetuity of all present and future rights to
 * this software under copyright law.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
 * ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 *
 * For more information, please refer to <https://unlicense.org>
 */


/****************************************
                 Global
 ****************************************/

body {
  background: #fafbfc;
}

html {
  scroll-behavior: smooth;
}

.green-button {
  background-color: #1EBA8C;
  border-color: #1EBA8C;
  color: white;
}

.green-button:hover {
  background-color: transparent;
  color: #1EBA8C;
  border-color: #1EBA8C;
}

.green-button:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #2eda77; /* Full freedom. (works also with border-radius) */
  border: 1px solid #1EBABC;
}

.green-search-button {
  background-color: #1EBA8C;
  border-color: #1EBA8C;
  color: white;
}

.green-search-button:hover {
  background-color: transparent;
  color: #1EBA8C;
}

.green-search-button:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #2eda77; /* Full freedom. (works also with border-radius) */
  border: 1px solid #1EBABC;
}

.green-button-transparent {
  border-color: #1EBA8C;
  color: #1EBA8C;
}

.green-button-transparent:hover {
  color: white;
  background-color: #1EBA8C;
  border-color: #1EBA8C;
}

.green-button-transparent:focus {
  outline: none;     /* oranges! yey */
  box-shadow: 0 0 2px 2px #2eda77; /* Full freedom. (works also with border-radius) */
  border: 1px solid #1EBABC;
}

input:focus, textarea:focus, button:focus, #create-product-button:focus, textarea.form-control:focus, input.form-control:focus{
  outline: none;     /* oranges! yey */
  box-shadow: 0 0 2px 2px #1EBA8C; /* Full freedom. (works also with border-radius) */
  border: 1px solid #1EBABC;
}

input[type="file"] {
  display: none;
}

/* Fix Footer */
#main{
  min-height: calc(100vh - 72px); /* 100px is the height of Footer */
}

Footer{
  height: 72px;
}

/*------------------ Hide arrows from input numbers ---------------------*/
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}
/*------------------------------------------------------------------------*/

/****************************************
               Login Page
 ****************************************/

#form-container {
  background-color: #fff;
  border-radius: 1rem;
}

/****************************************
              Profile Page
 ****************************************/

/*#profileContainer {*/
/*  width: 60%;*/
/*}*/

#edit-profile-button {
  background-color: #fff;
  border-color: #1EBA8C;
}

#edit-profile-button:hover {
  background-color: #1EBA8C
}

/****************************
            Logo
 ****************************/

.company-name-main-font {
  font-family: 'Merriweather Sans', sans-serif;
  font-size: 30px;
}

.company-name-sub-heading {
  line-height: 50%;
  font-family: 'Rochester', cursive;
  font-size: 35px;
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 0;
  margin-left: auto;
  margin-right: auto;
}
/****************************************
              Search Page
 ****************************************/

/*.right-border {*/
/*  border-right: 1px solid grey;*/
/*}*/

/*.left-border {*/
/*  border-left: 1px solid grey;*/
/*}*/

.header-col {
  background-color: #a2b2c3;
}

.row-colour {
  background-color: #fff;
}

.row-colour-dark {
  background-color: #efefef;
}

.row-colour:hover {
  background-color: lightgrey;
}

.col-hover:hover {
  background-color: lightgrey;
}

/****************************************
         Business Registration Page
 ****************************************/

.form-select:focus {
  outline: none;     /* oranges! yey */
  box-shadow: 0 0 2px 2px #1EBA8C; /* Full freedom. (works also with border-radius) */
  border: 1px solid #1EBABC;
}

/*****************************************************************
                  Autocomplete Dropdown Styling

           This CSS is from the example code snippet
   found on w3schools for a simple autocomplete dropdown menu:
    https://www.w3schools.com/howto/howto_js_autocomplete.asp

 *****************************************************************/

.autocomplete {
  position: relative;
  display: inline-block;
}

.autocomplete-items {
  position: absolute;
  border: 1px solid #d4d4d4;
  border-bottom: none;
  border-top: none;
  z-index: 99;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff;
  border-bottom: 1px solid #d4d4d4;
}

.autocomplete-items div:hover {
  background-color: #e9e9e9;
}

.autocomplete-active {
  background-color: DodgerBlue !important;
  color: #ffffff;
}

/*****************************************************************/

.text-font, p, h, label, textarea, select, button, h4 {
  font-family: 'Roboto', sans-serif;
}

